[package]
name = "anchor_test"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
env_logger = "0.9"
log = "0.4"
serde = "1.0.139"
tokio = "1.19.2"
anyhow = "1.0.75"
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
] }
rand = "0.8.5"
regex = "1.10.2"

[dev-dependencies]
actix-http = "3"
serde_json = "1.0.82"
